--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                     <p>Interaktives Menü führt durch die Paket-Erstellung</p>
                 </div>
                 <div class="feature">
-                    <h3>🔧 OPSI-konform</h3>
-                    <p>Erstellt automatisch control und opsiscript Dateien</p>
+                    <h3>🚀 Auto-Deployment</h3>
+                    <p>Automatisches Hochladen und Installieren auf OPSI-Server</p>
                 </div>
                 <div class="feature">
                     <h3>🖥️ SSH-Integration</h3>
-                    <p>Direkte Verbindung zum OPSI-Server</p>
+                    <p>Direkte Verbindung zum OPSI-Server (10.1.0.2)</p>
                 </div>
                 <div class="feature">
                     <h3>📦 Setup-Support</h3>
@@ -119,9 +119,9 @@
                 <li>Tool installieren mit PowerShell-Befehl</li>
                 <li>Desktop-Verknüpfung "OPSI PackForge" starten</li>
                 <li>Paket-Informationen eingeben (ID, Name, Version)</li>
-                <li>Optional: Setup-Datei und Silent-Parameter angeben</li>
-                <li>Paket wird mit OPSI-Struktur erstellt</li>
-                <li>Optional: SSH-Verbindung zum Server für Deployment</li>
+                <li>Setup-Dateien in CLIENT_DATA Ordner kopieren</li>
+                <li>Automatisches Deployment auf OPSI-Server bestätigen</li>
+                <li>Paket wird gebaut und im OPSI installiert</li>
             </ol>
         </div>
         
